--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This file lists all individuals who have contributed content to this repository.
+# This file contains names of who have contributed content to this repository.
 
 Ahmed Abdulwahid <Ahmedz1a2m@gmail.com>
