--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals who have contributed content to this repository.
 
 Ahmed Abdulwahid <Ahmedz1a2m@gmail.com>
+Ahmed Abdulwahid <Ahmedz1a2m@gmail.com>
